--- a/src/main/webapp/list.xhtml
+++ b/src/main/webapp/list.xhtml
@@ -46,6 +46,34 @@ Other names may be trademarks of their respective owners.
         <title>Pet Catalog</title>
     </h:head>
     <h:body>
+
+        <h:form id="loginForm" rendered="#{not identity.loggedIn}">
+            <h:messages globalOnly="true"/>
+
+            <div class="loginRow">
+                <h:outputLabel for="name" value="Username" styleClass="loginLabel"/>
+                <h:inputText id="name" value="#{loginCredentials.userId}"/>
+            </div>
+
+            <div class="loginRow">
+                <h:outputLabel for="password" value="Password" styleClass="loginLabel"/>
+                <h:inputSecret id="password" value="#{loginCredentials.password}" redisplay="true"/>
+            </div>
+
+            <div class="loginRow">
+
+            </div>
+
+            <div class="buttons">
+                <h:commandButton id="login" value="Login" action="#{loginController.login}" styleClass="loginButton"/>
+            </div>
+
+            Tip: you can login with a username/password of jane/demo   or   john/demo.
+
+        </h:form>
+
+        <br style="clear:both"/>
+
         <table style="text-align: left; width: 60%;" border="0" >
             <tbody>
                 <tr>
@@ -58,13 +86,25 @@ Other names may be trademarks of their respective owners.
             </tbody>
         </table>
 
-        <h:form  styleClass="jsfcrud_list_form">
+        <ui:fragment rendered="#{identity.loggedIn}">
+            <div>Congratulations! You are currently logged in as: <b>#{identity.agent.loginName}</b></div>
+
+            <h:form>
+                <h:commandButton id="logout" value="Log out" action="#{identity.logout}"/>
+            </h:form>
+        </ui:fragment>
+
+        <h:form  styleClass="jsfcrud_list_form" rendered="#{identity.loggedIn}">
 
 
             <h:outputStylesheet name="css/styles.css"/>
             <h:outputText value="Item #{catalog.pagingInfo.firstItem + 1} .. #{catalog.pagingInfo.lastItem} of #{catalog.pagingInfo.itemCount}    "/>
             <h:commandButton action="#{catalog.prev}" value="#{msgs.Previous}"  rendered="#{catalog.pagingInfo.isPrevItems}" />
-            <h:commandButton action="#{catalog.next}" value="#{msgs.Next}"  rendered="#{catalog.pagingInfo.isNextItems}"/>
+
+            <ui:fragment rendered="#{navigator.displayNext()}">
+               <h:commandButton action="#{catalog.next}" value="#{msgs.Next}"  rendered="#{catalog.pagingInfo.isNextItems}"/>
+            </ui:fragment>
+
             <h:dataTable var="row" value="#{catalog.items}"  border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px" >
                 <h:column>
                     <f:facet name="header">
